--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -1,3 +1,22 @@
+.title {
+	text-align: center;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 64px;
+	line-height: 75px;
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+.title:after {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 60px;
+	background-color: #fff;
+	margin: 26px auto auto;
+}
+
 .details-row {
 	display: flex;
 	flex-wrap: wrap;
