beautify css code

--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -58,7 +58,7 @@
 	margin-bottom: 100px;
 }
 
-.table-title, .features-subtitle {
+.table-title, h3.features-subtitle {
 	font-weight: bold;
 	font-size: 24px;
 	line-height: 140%;
